--- a/main.html
+++ b/main.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Multiple-Choice Quiz</h1>
-        <div id="questions"></div>
-        <button id="submit">Submit</button>
-        <div id="score"></div>
-    </div>
-    <script src="script.js"></script>
-</body>
+
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <!-- do not change this code -->
+    <h1>Quiz</h1>
+    <div id="questions"></div>
+    <button id="submit">Submit</button>
+    <div id="score"></div>
+
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
+</html><!DOCTYPE html>
+
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <!-- do not change this code -->
+    <h1>Quiz</h1>
+    <div id="questions"></div>
+    <button id="submit">Submit</button>
+    <div id="score"></div>
+
+    <script type="text/javascript" src="./script.js"></script>
+  </body>
 </html>
